[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/scripts/Hook.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/Chain.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/spritesheets/tinydeathhook.png" type="Texture" id=3]
[ext_resource path="res://sprites/textures/chain.png" type="Texture" id=4]
[ext_resource path="res://scenes/scripts/RaycastControllerHook.gd" type="Script" id=5]
[ext_resource path="res://resources/sounds/pull.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/sounds/throw.wav" type="AudioStream" id=7]
[ext_resource path="res://resources/sounds/hit.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/entities/visual/HookHitParticles.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "stick_horizontal_plane"
length = 1.2
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "stick_vertical_plane"
length = 1.2
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[node name="Hook" type="KinematicBody2D"]
z_index = 3
z_as_relative = false
collision_layer = 2147483664
collision_mask = 3
script = ExtResource( 1 )
Chain = ExtResource( 2 )
HookHitParticles = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 3
hframes = 2
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shoot = SubResource( 1 )
anims/stick_horizontal_plane = SubResource( 2 )
anims/stick_vertical_plane = SubResource( 3 )

[node name="PhysicsHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="DrawingLine" type="Line2D" parent="."]
z_index = 2
z_as_relative = false
width = 14.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 4 )
texture_mode = 1

[node name="RaycastController" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Up" type="RayCast2D" parent="RaycastController"]
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 3

[node name="Right" type="RayCast2D" parent="RaycastController"]
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3

[node name="Down" type="RayCast2D" parent="RaycastController"]
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 3

[node name="Left" type="RayCast2D" parent="RaycastController"]
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 3

[node name="ThrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="PullSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
